k8s/03-database.yaml
apiVersion: v1
kind: Service
metadata:
  name: nvd-database-svc
  namespace: nvd-system
spec:
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: nvd-database
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: nvd-database
  namespace: nvd-system
spec:
  serviceName: "nvd-database-svc"
  replicas: 1
  selector:
    matchLabels:
      app: nvd-database
  template:
    metadata:
      labels:
        app: nvd-database
    spec:
      containers:
        - name: postgres
          image: postgres:15-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: db-data
              mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
    - metadata:
        name: db-data
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 1Gi
