k8s/04-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: nvd-backend-svc
  namespace: nvd-system
spec:
  selector:
    app: nvd-backend
  ports:
    - port: 5000
      targetPort: 5000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nvd-backend
  namespace: nvd-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nvd-backend
  template:
    metadata:
      labels:
        app: nvd-backend
    spec:
      containers:
        - name: backend
          image: stojkovskiandrej/nvd-backend:latest
          ports:
            - containerPort: 5000
