k8s/06-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nvd-ingress
  namespace: nvd-system
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: nvdproject.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nvd-frontend-svc
                port:
                  number: 3000
